fixes alignment issue

--- a/portal/src/components/StarRating/StarRating.component.less
+++ b/portal/src/components/StarRating/StarRating.component.less
@@ -115,7 +115,7 @@
 
   &__counter {
     display: inline-block;
-    vertical-align: text-bottom;
+    vertical-align: bottom;
     .star-rating--big &{
       font-weight: bold;
       font-size: 18px;
